# linked-list

./: .gitignore  LICENSE  README.md  TODO.md  calculator  calculator.c  test.py  tester.py
C/: CMakeLists.txt  README.md
C/core/: analysis.c  analysis.h  calculator.c  calculator.h  operations.c  operations.h  user_interface.c  user_interface.h  util.c  util.h
C/docs/: Doxyfile  README.md
C/docs/html/: TEST__LIST_8cpp.html  annotated.html  autotoc_md0.html  autotoc_md3.html  calculator_8h_source.html  catch_8hpp_source.html  catch__reporter__automake_8hpp_source.html  catch__reporter__tap_8hpp_source.html  catch__reporter__teamcity_8hpp_source.html  charlist_8h_source.html  classCatch_1_1AssertionHandler-members.html  classCatch_1_1AssertionHandler.html  classCatch_1_1BenchmarkLooper-members.html  classCatch_1_1BenchmarkLooper.html  classCatch_1_1BinaryExpr-members.html  classCatch_1_1BinaryExpr.html  classCatch_1_1Capturer-members.html  classCatch_1_1Capturer.html  classCatch_1_1Detail_1_1Approx-members.html  classCatch_1_1Detail_1_1Approx.html  classCatch_1_1Detail_1_1IsStreamInsertable-members.html  classCatch_1_1Detail_1_1IsStreamInsertable.html  classCatch_1_1ExceptionTranslatorRegistrar-members.html  classCatch_1_1ExceptionTranslatorRegistrar.html  classCatch_1_1ExprLhs-members.html  classCatch_1_1ExprLhs.html  classCatch_1_1GeneratorException-members.html  classCatch_1_1GeneratorException.html  classCatch_1_1Generators_1_1ChunkGenerator-members.html  classCatch_1_1Generators_1_1ChunkGenerator.html  classCatch_1_1Generators_1_1FilterGenerator-members.html  classCatch_1_1Generators_1_1FilterGenerator.html  classCatch_1_1Generators_1_1FixedValuesGenerator-members.html  classCatch_1_1Generators_1_1FixedValuesGenerator.html  classCatch_1_1Generators_1_1GeneratorUntypedBase-members.html  classCatch_1_1Generators_1_1GeneratorUntypedBase.html  classCatch_1_1Generators_1_1GeneratorWrapper-members.html  classCatch_1_1Generators_1_1GeneratorWrapper.html  classCatch_1_1Generators_1_1Generators-members.html  classCatch_1_1Generators_1_1Generators.html  (+303 more)
C/docs/html/search/: all_0.js  all_1.js  all_10.html  all_11.html  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  classes_0.js  classes_10.html  classes_2.html  classes_2.js  classes_3.html  classes_4.html  classes_5.html  classes_5.js  classes_6.html  classes_6.js  classes_7.html  classes_7.js  classes_8.html  classes_8.js  classes_9.html  classes_9.js  classes_a.html  classes_a.js  classes_b.html  classes_c.html  classes_d.html  classes_e.html  classes_f.html  files_1.js  (+22 more)
C/docs/inspiração/: doxygen_c.h  index.html
C/docs/inspiração/index_files/: search.js
C/docs/latex/: TEST__LIST_8cpp.tex  annotated.tex  autotoc_md0.tex  autotoc_md3.tex  classCatch_1_1AssertionHandler.tex  classCatch_1_1BenchmarkLooper.tex  classCatch_1_1BinaryExpr.tex  classCatch_1_1Capturer.tex  classCatch_1_1Detail_1_1Approx.tex  classCatch_1_1Detail_1_1IsStreamInsertable.tex  classCatch_1_1ExceptionTranslatorRegistrar.tex  classCatch_1_1ExprLhs.tex  classCatch_1_1GeneratorException.tex  classCatch_1_1Generators_1_1ChunkGenerator.tex  classCatch_1_1Generators_1_1FilterGenerator.tex  classCatch_1_1Generators_1_1FixedValuesGenerator.tex  classCatch_1_1Generators_1_1GeneratorUntypedBase.tex  classCatch_1_1Generators_1_1GeneratorWrapper.tex  classCatch_1_1Generators_1_1Generators.tex  classCatch_1_1Generators_1_1MapGenerator.tex  classCatch_1_1Generators_1_1RandomFloatingGenerator.tex  classCatch_1_1Generators_1_1RandomIntegerGenerator.tex  classCatch_1_1Generators_1_1RangeGenerator.tex  classCatch_1_1Generators_1_1RepeatGenerator.tex  classCatch_1_1Generators_1_1SingleValueGenerator.tex  classCatch_1_1Generators_1_1TakeGenerator.tex  classCatch_1_1LazyExpression.tex  classCatch_1_1MatchExpr.tex  classCatch_1_1Matchers_1_1Generic_1_1PredicateMatcher.tex  classCatch_1_1Matchers_1_1Impl_1_1MatcherUntypedBase.tex  classCatch_1_1NonCopyable.tex  classCatch_1_1ReusableStringStream.tex  classCatch_1_1ScopedMessage.tex  classCatch_1_1Section.tex  classCatch_1_1StringRef.tex  classCatch_1_1TestCase.tex  classCatch_1_1TestInvokerAsMethod.tex  classCatch_1_1Timer.tex  classCatch_1_1UnaryExpr.tex  files.tex  (+132 more)
C/include/: terminal_functions.h
C/lib/list/: list.c  list.h
C/lib/old_files/: calculator.c  intlist.h  test  test.c  utilities.h
C/lib/terminal_functions/: terminal_functions.c  terminal_functions.h
C/main/: main.c  test_main.c
C/src/: calculator.c
C/src/list/: list.h
C/tests/: README.md
C/tests/analysis/: TEST_COPY_TO.cpp  TEST_EXPR_TO_LIST.cpp  TEST_FIND_NUMBER_END.cpp  TEST_IS_NUMBER.cpp  TEST_IS_OPERATOR.cpp
C/tests/calculator/: TEST_EVALUATE.cpp  TEST_IS_BALANCED.cpp  TEST_IS_BRACKET.cpp  TEST_MATCH.cpp  TEST_SANITIZE.cpp  TEST_TO_POSTIFX.cpp
C/tests/list/: TEST_GET_AT_INDEX.cpp  TEST_LIST.cpp  TEST_LIST_CHAR.cpp  TEST_LIST_DOUBLE.cpp  TEST_LIST_INT.cpp  TEST_STACK.cpp  test_list.cpp
C/tests/random_tests/: README.md  list_test.c  main.c  mult_allcs_w_lists.c  mult_allcs_w_lists2.c  multiple_allocs  multiple_allocs.c  node_test.c  return_str  return_str.c  t_list.c  test_list2.c  ungetc_str.c  void.c  voidlist.c
C/tests/terminal_functions/: TEST_READ_FROM_TERMINAL.cpp  test_terminal_functions.cpp
C/tests/user_interface/: TEST_FUNCTION.cpp
C/tests/util/: TEST_REMOVE_ILLEGAL.cpp  TEST_REMOVE_WHITESPACE.cpp
(+24 files in other folders)
